# ZumoBot-Raspberry-Pi-Targeting

./: CMakeLists.txt  LICENSE  README.md  circles.cpp  magica.cpp
arduino/: newtest  test
arduino/magica/: magica.ino
libs/: libarduino.la  libfirmataplus.la  libfirmataplus_servo.la  libfirmataplus_servotimetimer1.la  libfirmataplus_servotimetimer1.so.0.0.0
src/: AppConfig.cpp  AppConfig.hpp  ArduinoController.cpp  ArduinoController.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  CmdLineInterface.cpp  LDetector.cpp  LDetector.hpp  LProcessor.cpp  LProcessor.hpp  VideoDevice.cpp  magica.cpp
src/includes/: firmata.h
